# verificador-de-processos

projeto/: pyproject.toml
