[tool.poetry]
name = "projeto"
version = "1.0"
description = "Automação de e-mails com Selenium"
authors = ["lkaubs <kauanmessi@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.24.0"
schedule = "^1.2.2"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"